--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -35,7 +35,7 @@ monitor=,1920x1200@165,auto,1.25
 # Set programs that you use
 $terminal = kitty
 $alterTerminal = kitty
-$fileManager = ranger
+$fileManager = dolphin
 $runmenu = wofi --show drun -I -i -a -w 1
 $menu = wofi --show dmenu -I -i -a -w 1
 
@@ -107,6 +107,12 @@ general {
 
     layout = dwindle
 }
+
+# Make xwayland apps unblurry
+# But in disables any scaling...
+# For apps like discord with built-in scaling it's not a problem, 
+# but may be a problem for ones that don't have it!
+xwayland:force_zero_scaling = true
 
 # https://wiki.hypr.land/Configuring/Variables/#decoration
 $fullOpacityActive = 1.05
